--- a/idris-ocaml.cabal
+++ b/idris-ocaml.cabal
@@ -11,7 +11,7 @@ Executable idris-codegen-ocaml
   Main-is:        Main.hs
   hs-source-dirs: src
 
-  Build-depends:  idris
+  Build-depends:  idris         == 1.*
                 , base
                 , containers
                 , directory
